tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_duplicate_implementation/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Impl for type `Foo` overlaps with existing impl
   ┌─ src/main.nr:8:10
   │
 8 │     impl Default2 for Foo {
   │          -------- Previous impl defined here
 9 │     }
10 │     impl Default2 for Foo {
   │                       --- Overlapping impl
   │

Aborting due to 1 previous error
