tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_duplicate_implementation/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Impl for type `Foo` overlaps with existing impl
   ┌─ src/main.nr:8:10
   │
 8 │     impl Default2 for Foo {
   │          -------- Previous impl defined here
 9 │     }
10 │     impl Default2 for Foo {
   │                       --- Overlapping impl
   │

Aborting due to 1 previous error
